dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Exact 
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
